@@ -7,7 +7,12 @@
  */
 
 //define major abspath constants from root constant
-define('SVR_ABSPATH', str_replace('\\','/',realpath($_SERVER['DOCUMENT_ROOT'])));
+
+//fix the problem with $_SERVER['DOCUMENT_ROOT'] not ending by / in some case
+$svr_path = str_replace('\\','/',realpath($_SERVER['DOCUMENT_ROOT']));
+if(substr($svr_path, -1, 1) !== '/') $svr_path .= '/';
+define('SVR_ABSPATH', $svr_path); unset($svr_path);
+
 define('PUBLIC_ABSPATH', SVR_ABSPATH . PUBLIC_ROOT);
 define('LIBRARY_ABSPATH', SVR_ABSPATH . LIBRARY_ROOT);
 define('APPLICATION_ABSPATH', SVR_ABSPATH . APPLICATION_ROOT);
